--- a/css/update-view.css
+++ b/css/update-view.css
@@ -1,8 +1,12 @@
 #statusContainer{
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
+	grid-column-gap: 10px;
 	align-items: center;
 	text-align: center;
 }
 	
+.card-title{
+	font-weight: bold;
+}
 	
