--- a/css/update-view.css
+++ b/css/update-view.css
@@ -2,8 +2,10 @@
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	grid-column-gap: 10px;
+	grid-row-gap: 10px;
 	align-items: center;
 	text-align: center;
+	margin-bottom: 20px;
 }
 	
 .card-title{
