--- a/css/chat-style.css
+++ b/css/chat-style.css
@@ -1,18 +1,13 @@
-#send-container {
-    position: absolute;
-    bottom: 10px;
-    left: 20px;
-}
-
 #message-container {
-    position: absolute;
-    left: 20px;
     width: 400px;
     height: 500px;
-    overflow: auto;
     border: 2px solid grey;
 }
 
-#message-container p {
-
+#mainContainer {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 9fr 1fr;
+	justify-items: center;
+	grid-row-gap: 20px;
 }
