--- a/css/login.css
+++ b/css/login.css
@@ -2,14 +2,11 @@
     padding: 5%;
     font-size: 5vw;
     text-align: center;
-    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: grey;
-
 }
 
 #background {
-    background-color: lightgreen;
-
+    background-color: #f8f9fa;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
