--- a/css/login.css
+++ b/css/login.css
@@ -8,8 +8,7 @@
 }
 
 #background {
-    background-color: lightgreen;
-
+    background-color: #90cfe0;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
